--- a/src/index.css
+++ b/src/index.css
@@ -117,3 +117,59 @@ code {
 .react-calendar--selectRange .react-calendar__tile--hover {
   background-color: #e6e6e6;
 }
+/* isverify css */
+
+.miniverifydiv {
+  height: 60vh;
+  width: 70%;
+  background: white;
+  display: flex;
+  border-radius: 20px;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+}
+.miniverifydiv img {
+  height: 100px;
+}
+.miniverifydivred {
+  height: 60vh;
+  width: 70%;
+  background: white;
+  display: flex;
+  border-radius: 20px;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+}
+.miniverifydivred img {
+  height: 100px;
+}
+.verifydivred {
+  height: 100vh;
+  width: 100%;
+  background: red;
+  display: flex;
+  align-items: center;
+}
+.verifydiv {
+  height: 100vh;
+  width: 100%;
+  background: #0353bc;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.wordblue {
+  font-size: 26px;
+  margin-top: 12px;
+  font-weight: 600;
+}
+.wordred {
+  font-size: 26px;
+  margin-top: 12px;
+  color: red;
+  font-weight: 600;
+}
+
+/* end of isverify css */
